--- a/shoplist.html
+++ b/shoplist.html
@@ -3,15 +3,16 @@
 	<head>
 		<title>Shopping List</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
-	</head>
+		<script language="Javascript" src="jquery-1.8.2.min.js" type="text/javascript"></script>
+		<script language="Javascript" type="text/javascript" src="list.js"></script>
 <body>
 	<div id="main">
 		<form action="#">
-						<input name="quantity" placeholder="Quantity">
-						<input name="item" placeholder="Item Description">
-						<input type="submit" value="enter">
-					</form>
-		<table>
+			<input type="text" id="number" placeholder="Quantity">
+			<input type="text" id="item" placeholder="Item Description">
+			<input id="add_item" type="button" value="To Buy!">
+		</form>
+		<table id="shopping_list">
 			<thead>
 				<th>Quantity</th>
 				<th colspan="2">Item</th>
