--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
 		<script language="Javascript" src="jquery-1.8.2.min.js" type="text/javascript"></script>
 		<script language="Javascript" type="text/javascript" src="list.js"></script>
 <body>
+
 	<div id="main">
-		<form action="#">
-			<input type="text" id="number" placeholder="Quantity">
-			<input type="text" id="item" placeholder="Item Description">
-			<input id="add_item" type="button" value="To Buy!">
-		</form>
-		<table id="shopping_list">
-			<thead>
-				<th>Quantity</th>
-				<th colspan="2">Item</th>
-			</thead>
-			<tbody>
-				<tr>
+		<h1>Shopping List.</h1>
+		<div id="num_item">
+			<form action="#">
+				<input type="text" id="number" placeholder="How Many?">
+				<input type="text" id="item" placeholder="Item Description">
+				<button id="add_item">+</button>
+			</form>
+		</div>
+		<div id="list">
+			<table id="shopping_list">
+				<thead>
+					<th width="37%"> <h3>Quantity</h3></th>
+					<th colspan="2"><h3>Item</h3></th>
+				</thead>
+				<tbody>
 					
-				</tr>
-			</tbody>
-		</table>
+				</tbody>
+
+			</table>
+		</div>
 	</div>
 </body>
 </html>
