--- a/index.html
+++ b/index.html
@@ -7,20 +7,16 @@
 		<script language="Javascript" type="text/javascript" src="list.js"></script>
 <body>
 	<div id="main">
-		<h1>Shopping List.</h1>
+		<div id="top"><h1>The Shopping List.</h1></div>
 		<div id="num_item">
 			<form action="#">
 				<input type="text" id="number" placeholder="How Many?">
 				<input type="text" id="item" placeholder="Item Description">
-				<button id="add_item">+</button>
 			</form>
 		</div>
 		<div id="list">
 			<table id="shopping_list">
-				<thead>
-					<th width="37%"> <h3>Quantity</h3></th>
-					<th colspan="2"><h3>Item</h3></th>
-				</thead>
+				
 				<tbody>
 					
 				</tbody>
