--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 		<div id="top"><h1>The Shopping List.</h1></div>
 		<div id="num_item">
 			<form action="#">
+				<input type="text" id="item" placeholder="What item?">
 				<input type="text" id="number" placeholder="How Many?">
-				<input type="text" id="item" placeholder="Item Description">
+				
+
 			</form>
 		</div>
 		<div id="list">
